# cortech

./: README.md  environment.yaml  meson.build  pyproject.toml
.github/workflows/: main.yaml
cortech/: _laplace.py  constants.py  cortex.py  example.py  freesurfer.py  meson.build  sphere.py  surface.py  utils.py
cortech/cgal/: aabb_tree.pyx  aabb_tree_src.cpp  meson.build  polygon_mesh_processing.pyx  polygon_mesh_processing_src.cpp
cortech/examples/: example.py
tests/: conftest.py  test_surface.py  test_utils.py
tools/: enter-vsdevshell.ps1  generate_pkgs.py
